Remove the hardcoded image and add green shape to About us section on homepage

--- a/Patrija.Web/Views/Partials/NestedContent/_AboutUs.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_AboutUs.cshtml
@@ -28,6 +28,6 @@
         </div>
     </div>
     <div class="about-us__shape">
-        <img src="https://1.bp.blogspot.com/-XcDRESNgY9w/XHpgsYlv2zI/AAAAAAAAIQY/YUAU35Ut6hwTenG8ax0_igJobgmaHTASACK4BGAYYCw/s1600/icon%2Bshape%2B01.png" alt="">
+        <img src="assets/images/shapes/about-us-shape.svg" alt="">
     </div>
 </div>
