Style the green shape / gray dot on the projects page

--- a/Patrija.Web/Views/ProjectPage.cshtml
+++ b/Patrija.Web/Views/ProjectPage.cshtml
@@ -19,9 +19,6 @@
     }
     else
     {
-        <div class="lice-ulice-dot">
-            <img src="" alt="">
-            @*Fe to finish :D *@
-        </div>
+        <span class="circle circle--grey circle--big lice-ulice-circle"></span>
     }
-</div>
+</span>
