--- a/html/src/scss/modules/_templates.scss
+++ b/html/src/scss/modules/_templates.scss
@@ -2,19 +2,28 @@
 //------------------------------------------------------------------------------
 
 .lice-ulice-page {
-	.lice-ulice-shape {
+	.lice-ulice-shape,
+	.lice-ulice-circle {
 		position: absolute;
-		top: 1218px;
-		left: -25.2vw;
 		pointer-events: none;
 	}
+	.lice-ulice-shape{
+		top: 1218px;
+		left: -25.2vw;
+	}
+	.lice-ulice-circle {
+		top: 1465px;
+		left: 16vw;
+	}
 	@include breakpoint(laptop) {
-		.lice-ulice-shape {
+		.lice-ulice-shape,
+		.lice-ulice-circle {
 			display: none;
 		}
 	}
 	@include mq-down(lg) {
-		.lice-ulice-shape {
+		.lice-ulice-shape,
+		.lice-ulice-circle {
 			display: none;
 		}
 	}
