Update News - Add missing bcg image

--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockTwoColumnThreeRows.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockTwoColumnThreeRows.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Patrija.Core.ViewModels.Shared.NewsBlogBlockViewModel
 
-<div class="articles has-cover" style="background-image: url('{{bgImage}}');">
+<div class="articles has-cover" style="background-image: url('/assets/images/shapes/articles-bg.svg');">
     <div class="wrap wrap--normal">
         <h2 class="h2 articles__title">@Model.BlogCategoryName</h2>
         <div class="articles__container  js-two_column_article_container" data-on-load-number="@Model.NumberOfTwoColumnArticlesOnLoad">
