Added missing documents -

--- a/Patrija.Web/Views/Partials/NestedContent/_BlogArticleContent.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_BlogArticleContent.cshtml
@@ -49,7 +49,7 @@
                                         }
 
                                         <div class="news-details__item-content">
-                                            <span class="news-details__item-date">@blog.Date.ToString("dd.MM.yyyy")</span>
+                                            <span class="news-details__item-date">@blog.Date.ToString("dd.MM.yyyy.")</span>
                                             @if (!string.IsNullOrWhiteSpace(blog.Title))
                                             {
                                                 <h4 class="h6 news-details__item-title">
