--- a/html/src/scss/modules/_news-details.scss
+++ b/html/src/scss/modules/_news-details.scss
@@ -181,6 +181,12 @@
 	font-size: 20px;
 	letter-spacing: -0.2px;
 	margin-bottom: 5px;
+	@include mq-down(md) {
+		font-size: 18px;
+	}
+	@include mq-down(sm) {
+		font-size: 16px;
+	}
 }
 
 .comment-block__text {
