--- a/Patrija.Web/Views/Partials/NestedContent/_ContactMap.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_ContactMap.cshtml
@@ -2,7 +2,7 @@
 @inherits UmbracoViewPage<ContactMapViewModel>
 
 <div class="contact-map">
-    <div class="wrap wrap--medium">
+    <div class="wrap wrap--normal">
         <div class="contact-map__container">
             <div class="contact-map__content">
                 <div class="contact-map__content-align">
@@ -25,6 +25,7 @@
                     <span class="circle circle--mint"></span>
                 </div>
             }
+            <span class="circle circle--mint"></span>
         </div>
     </div>
 </div>
