--- a/html/src/scss/modules/_contact-form.scss
+++ b/html/src/scss/modules/_contact-form.scss
@@ -23,7 +23,7 @@
 	display: flex;
 	align-items: flex-start;
 	justify-content: space-between;
-	padding: 0 45px;
+	padding: 0 22px;
 	@include mq-down(md) {
 		padding: 0;
 		flex-direction: column;
@@ -45,7 +45,10 @@
 .contact-form__container {
 	flex: 1 1 50%;
 	max-width: 50%;
-	padding: 0 60px 20px 22px;
+	padding: 0 100px 20px 0px;
+	@include mq-down(lg) {
+		padding-right: 0;
+	}
 	@include mq-down(md) {
 		flex: 1 1 100%;
 		max-width: 100%;
