--- a/html/src/scss/modules/_contact-map.scss
+++ b/html/src/scss/modules/_contact-map.scss
@@ -7,14 +7,6 @@
 	.wrap {
 		height: 100%;
 	}
-	.circle--blue {
-		top: 23%;
-		right: 13.6%;
-	}
-	.circle--mint {
-		top: 78.5%;
-		left: -6.8%;
-	}
 	@include mq-down(md) {
 		height: 550px;
 		margin-bottom: 30px;
@@ -34,6 +26,13 @@
 	}
 	@include mq-down(sm) {
 		padding: 30px 0 0;
+	}
+	.circle--mint {
+		top: 91.5%;
+		left: -2%;
+		@include mq-down(sm) {
+			display: none;
+		}
 	}
 }
 
@@ -82,7 +81,7 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 100%;
+		width: 101%;
 		height: 100%;
 		background-image: url('../assets/images/mask/page-intro-secondary-mask.svg');
 		background-position: center center;
@@ -96,5 +95,16 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
+	}
+	.circle--blue {
+		top: 23%;
+		right: 13.6%;
+	}
+	.circle--mint {
+		top: 78.5%;
+		left: -6.8%;
+		@include mq-down(sm) {
+			display: block;
+		}
 	}
 }
