Update home page banner's image

--- a/html/src/scss/config/_variables.scss
+++ b/html/src/scss/config/_variables.scss
@@ -29,7 +29,8 @@ $ease: ease-in-out;
 //------------------------------------------------------------------------------
 
 $grid-breakpoints: (
-	xs: 0,
+	xxs: 0,
+	xs: 375px,
 	sm: 576px,
 	md: 768px,
 	lg: 992px,
