--- a/html/src/scss/modules/_home-intro.scss
+++ b/html/src/scss/modules/_home-intro.scss
@@ -16,7 +16,7 @@
 	}
 	@include mq-down(sm) {
 		padding-top: 160px;
-		margin-bottom: -155px;
+		margin-bottom: 45px;
 	}
 }
 
@@ -55,30 +55,60 @@
 	}
 }
 
-.home-intro__image-wrapper {
+.home-intro__image-outer {
 	position: absolute;
-	width: 75.21vw;
-	top: -680px;
-	left: 55.6%;
-	@include breakpoint(laptop) {
-		width: 61.21vw;
-		top: -338px;
-		left: 61.6%;
+	width: 39.271vw;
+	top: -77%;
+	left: 64%;
+	@include mq-down(xs) {
+		width: 43vw;
+		top: -82%;
+		left: 58%;
 	}
-	@include mq-only(lg) {
-		top: -310px;
+	@include mq-down(xxs) {
+		top: -65%;
 	}
-	@include mq-only(md) {
-		top: -340px;
+}
+
+.home-intro__image {
+	position: relative;
+	padding-bottom: 88.065%;
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-image: url('../assets/images/mask/homepage-intro-mask.svg');
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
 	}
-	@include mq-down(sm) {
-		position: relative;
-		top: -500px;
+}
+
+.home-intro__image--secondary {
+	padding-bottom: 90%;
+	&::after {
+		background-image: url('../assets/images/mask/page-intro-secondary-mask.svg');
+	}
+	.circle--blue {
+		top: 27.8%;
+		right: 6.2%;
+		left: auto;
+	}
+	.circle--mint {
+		top: 80.2%;
+		left: -13.8%;
 	}
 }
 
 .homepage-intro__img {
-	padding-bottom: 90%;
+	position: absolute;
+	top: 0.5%;
+	left: 0.5%;
+	width: 99%;
+	height: 99%;
 }
 
 .home-intro__circle {
@@ -92,7 +122,7 @@
 	background-color: $blue;
 	width: 61px;
 	height: 61px;
-	top: 36.8%;
+	top: 9.8%;
 	left: 17.1%;
 	box-shadow: 0 10px 16px rgba(39, 142, 208, 0.16), 0 4px 6px rgba(0, 0, 0, 0.06);
 	@include breakpoint(laptop) {
@@ -126,8 +156,8 @@
 	background-color: $grey-light;
 	width: 42px;
 	height: 42px;
-	top: 77.7%;
-	left: 48.4%;
+	top: 81%;
+	left: 81.4%;
 	box-shadow: 0 10px 16px rgba(196, 196, 196, 0.16), 0 4px 6px rgba(0, 0, 0, 0.06);
 	@include breakpoint(laptop) {
 		width: 22px;
