Add a green shape to faq section

--- a/Patrija.Web/Views/Partials/NestedContent/_FaqContainer.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_FaqContainer.cshtml
@@ -9,4 +9,7 @@
             }
         </div>
     </div>
+    <div class="faq__shape">
+        <img src="/assets/images/shapes/faq-shape.svg" alt="">
+    </div>
 </div>
