Update home intro in html folder and add new masks

--- a/html/src/html/modules/home-intro/home-intro.hbs
+++ b/html/src/html/modules/home-intro/home-intro.hbs
@@ -2,11 +2,13 @@
 	<div class="wrap home-intro__wrap">
 		<p class="home-intro__text">{{introText}}</p>
 		<a class="btn" href="javascript:;">{{readMore}}</a>
-		<div class="home-intro__image">
-			<img src="{{introImg}}" alt="">
-			<span class="home-intro__circle home-intro__circle--blue"></span>
-			<span class="home-intro__circle home-intro__circle--mint"></span>
-			<span class="home-intro__circle home-intro__circle--grey"></span>
+		<div class="home-intro__image-outer">
+			<div class="home-intro__image">
+				<div class="homepage-intro__img has-cover" style="url({{introImg}})"></div>
+				<span class="home-intro__circle home-intro__circle--blue"></span>
+				<span class="home-intro__circle home-intro__circle--mint"></span>
+				<span class="home-intro__circle home-intro__circle--grey"></span>
+			</div>
 		</div>
 	</div>
 </div>
