Style the comment form

--- a/Patrija.Web/Views/Partials/NestedContent/_BlogArticleContent.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_BlogArticleContent.cshtml
@@ -40,32 +40,30 @@
                         }
                         @{var form = Model.CommentsBlock.Form;}
                             <div id="comment-form" data-pagename="@Model.CurrentPage.PageTitle" class="news-details__form-wrapper">
-                                <div class="simple-form" id="blogcomment">
-                                    <div class="wrap wrap--normal">
-                                        <div class="simple-form__content">
-                                            <div class="simple-form__container">
-                                                <form action="" method="post" class="form">
-                                                    <div class="form__row">
-                                                        <label class="form__label" for="name">@form.NameFieldText</label>
-                                                        <input class="form__input" type="text" id="name" name="name">
-                                                        <span class="form__error-message" data-for="name">@form.NameFieldError</span>
-                                                    </div>
-                                                    <div class="form__row">
-                                                        <label class="form__label" for="email">@form.EmailFieldText</label>
-                                                        <input class="form__input" type="email" id="email" name="email">
-                                                        <span class="form__error-message" data-for="email">@form.EmailFieldError</span>
-                                                    </div>
-                                                    <div class="form__row">
-                                                        <label class="form__label" for="message">@form.CommentFieldText</label>
-                                                        <textarea class="form__input form__input--textarea" id="message" name="message"></textarea>
-                                                        <span class="form__error-message" data-for="message">@form.CommentFieldError</span>
-                                                    </div>
-                                                    <div class="form__row">
-                                                        <button class="btn btn--mint btn--submit" type="button">@form.SubmitButtonText</button>
-                                                    </div>
-                                                    <span class="form__message-success">@Html.Raw(form.SuccessMessage)</span>
-                                                </form>
-                                            </div>
+                                <div class="comment-form" id="blogcomment">
+                                    <div class="simple-form__content">
+                                        <div class="simple-form__container">
+                                            <form action="" method="post" class="form">
+                                                <div class="form__row">
+                                                    <label class="form__label" for="name">@form.NameFieldText</label>
+                                                    <input class="form__input" type="text" id="name" name="name">
+                                                    <span class="form__error-message" data-for="name">@form.NameFieldError</span>
+                                                </div>
+                                                <div class="form__row">
+                                                    <label class="form__label" for="email">@form.EmailFieldText</label>
+                                                    <input class="form__input" type="email" id="email" name="email">
+                                                    <span class="form__error-message" data-for="email">@form.EmailFieldError</span>
+                                                </div>
+                                                <div class="form__row">
+                                                    <label class="form__label" for="message">@form.CommentFieldText</label>
+                                                    <textarea class="form__input form__input--textarea" id="message" name="message"></textarea>
+                                                    <span class="form__error-message" data-for="message">@form.CommentFieldError</span>
+                                                </div>
+                                                <div class="form__row">
+                                                    <button class="btn btn--submit" type="button">@form.SubmitButtonText</button>
+                                                </div>
+                                                <span class="form__message-success">@Html.Raw(form.SuccessMessage)</span>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
