Increase the number of articles visible on news page

--- a/html/src/scss/modules/_news-list.scss
+++ b/html/src/scss/modules/_news-list.scss
@@ -2,12 +2,9 @@
 //------------------------------------------------------------------------------
 
 .news-list {
-	margin-bottom: 20px;
-	@include mq-only(lg) {
-		margin-bottom: 60px;
-	}
+	padding: 60px 0;
 	@include mq-down(sm) {
-		margin-bottom: 40px;
+		padding: 40px 0;
 	}
 }
 
