Update BlogIntro ShapeVariant

--- a/Patrija.Web/Views/Partials/NestedContent/_BlogIntro.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_BlogIntro.cshtml
@@ -1,11 +1,13 @@
-﻿@model Patrija.Core.ViewModels.Shared.BlogIntroViewModel
+﻿@using Patrija.Web.DisplayHelpers
+@model Patrija.Core.ViewModels.Shared.BlogIntroViewModel
+
 
 <div class="page-intro">
     <div class="wrap wrap--medium">
         <div class="page-intro__container">
             <div class="page-intro__content">
                 <div class="page-intro__content-align">
-                    @if(Model.FormatedPublishDate != null)
+                    @if (Model.FormatedPublishDate != null)
                     {
                         <h5 class="page-intro__date">@Model.FormatedPublishDate</h5>
                     }
@@ -21,8 +23,8 @@
 
                 </div>
             </div>
-            <div class="page-intro__image-outer">
-                <div class="page-intro__image">
+            <div class="page-intro__image-outer page-intro__image--@(Dictionaries.ShapeVariantMap[Model.ShapeVariant])">
+                <div class="page-intro__image page-intro__image--@(Dictionaries.ShapeVariantMap[Model.ShapeVariant])">
                     <div class="page-intro__img has-cover" style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
                     <span class="circle circle--blue circle--large"></span>
                     <span class="circle circle--mint"></span>
