--- a/html/src/scss/modules/_join-module.scss
+++ b/html/src/scss/modules/_join-module.scss
@@ -133,7 +133,7 @@
 	background-color: rgba($white, 0.75);
 	z-index: 2000;
 	display: none;
-	@include mq-down(sm) {
+	@include mq-down(md) {
 		overflow: auto;
 	}
 }
@@ -156,11 +156,23 @@
 	margin-top: -80px;
 	border-radius: 15px;
 	box-shadow: 4px 4px 20px rgba($black, 0.25);
+	@include mq-down(lg) {
+		width: 90%;
+		padding: 50px 30px;
+	}
+	@include mq-down(md) {
+		top: 30px;
+		transform: translateX(-50%);
+		left: 50%;
+		padding: 80px 30px;
+		margin-bottom: 30px;
+	}
 	@include mq-down(sm) {
-		top: 0;
+		top: 20px;
 		transform: translate(-50%);
 		padding: 58px 30px;
 		border-radius: 0;
+		margin-bottom: 20px;
 	}
 	.loaded & {
 		transition: $duration-slow $ease;
