Remove unused classes

--- a/Patrija.Web/Views/Partials/NestedContent/_PageIntro.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_PageIntro.cshtml
@@ -45,7 +45,7 @@ else
                     </div>
                 </div>
 
-                <div class="page-intro__image-outer page-intro__image--@(Dictionaries.ShapeVariantMap[Model.ShapeVariant])">
+                <div class="page-intro__image-outer">
                     <div class="page-intro__image page-intro__image--@(Dictionaries.ShapeVariantMap[Model.ShapeVariant])">
                         <div class="page-intro__img has-cover" style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
                         <span class="circle circle--blue circle--large"></span>
